--- a/crd-validation.yaml
+++ b/crd-validation.yaml
@@ -1,5 +1,5 @@
 global:
-  output: /etc/crd/
+  output: ./generated
 tfjob:
   apiVersion: apiextensions.k8s.io/v1beta1
   kind: CustomResourceDefinition
@@ -8,6 +8,7 @@ tfjob:
   spec:
     group: kubeflow.org
     version: v1alpha2
+    scope: Namespaced
     names:
       kind: TFJob
       singular: tfjob
