--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -22,9 +22,9 @@
   version = "kubernetes-1.13.10"
   name = "k8s.io/apiextensions-apiserver"
 
-[[constraint]]
-  name = "github.com/lyft/flytepropeller"
-  branch = "openapi-def"
+# [[constraint]]
+#  name = "github.com/lyft/flytepropeller"
+#  branch = "openapi-def"
 
 [[override]]
   name = "k8s.io/go-client"
